@@ -1,5 +1,10 @@
 2001-08-04  Martin Baulig  <baulig@suse.de>
 
+	* gnome-sound.h (gnome_sound_sample_new_from_file):
+	Added `const gchar *name' argument.
+
+2001-08-04  Martin Baulig  <baulig@suse.de>
+
 	* *.[ch]: Fixed #includes, only include necessary
 	header files, use <...> instead of "..." where
 	appropriate.
